<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:gravity="center"
    tools:background="@color/secondary">

    <androidx.cardview.widget.CardView
        android:id="@+id/phonePreviewCardView"
        android:layout_width="86dp"
        android:layout_height="86dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/phonePreviewImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/phone_preview"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/brandTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mark_pro_medium"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/white"
            android:textSize="19sp"
            tools:text="Galaxy Note 20 Ultra" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/mark_pro_medium"
            android:textColor="@color/primary"
            android:textSize="19sp"
            tools:text="$3000.00" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/itemCountCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        app:cardBackgroundColor="@color/item_count_card_view_color"
        app:cardCornerRadius="26dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/minus_icon"
                android:src="@drawable/ic_minus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:fontFamily="@font/mark_pro_medium"
                android:text="@string/default_item_count"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/plus_icon"
                android:src="@drawable/ic_plus" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/trash_icon"
        android:src="@drawable/ic_trash" />

</LinearLayout>