<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".presentation.CartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="12dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/backCardView"
            android:layout_width="38dp"
            android:layout_height="38dp"
            app:cardBackgroundColor="@color/secondary"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/arrow_left_icon"
                android:src="@drawable/ic_arrow_left" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/mark_pro_medium"
            android:gravity="end"
            android:text="@string/add_address"
            android:textColor="@color/secondary"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="38dp"
            android:layout_height="38dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/location_icon"
                android:src="@drawable/ic_location"
                app:tint="@color/white" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/mark_pro_bold"
        android:text="@string/my_cart"
        android:textColor="@color/secondary"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_corner_shape"
        android:backgroundTint="@color/secondary"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="12dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/basketRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                tools:itemCount="2"
                tools:listitem="@layout/cart_item" />

            <ProgressBar
                android:id="@+id/basketProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/primary"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/basketRecyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/basketRecyclerView"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:dividerColor="@color/big_divider_color" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mark_pro_normal"
                android:text="@string/total"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mark_pro_bold"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                tools:text="$6,000 us" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mark_pro_normal"
                android:text="@string/delivery"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/deliveryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mark_pro_bold"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/priceTextView"
                app:layout_constraintTop_toBottomOf="@+id/priceTextView"
                tools:text="Free" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:dividerColor="@color/small_divider_color" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="26dp"
            android:fontFamily="@font/mark_pro_bold"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/primary"
            app:cornerRadius="10dp" />

    </LinearLayout>

</LinearLayout>